--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -43,19 +43,20 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="event-descricao" class="col-sm-4 control-label">Descrição:</label>
+              <label for="event-descricao" class="col-sm-4 control-label">Descrição</label>
               <div class="col-sm-8">
                 <textarea class="form-control" id="event-descricao" name="event-descricao" rows="3"></textarea>
               </div>
             </div>
             <div class="form-group row">
-              <label for="event-observation" class="col-sm-4 control-label">Obs:</label>
+              <label for="event-observation" class="col-sm-4 control-label">Obs.</label>
               <div class="col-sm-8">
                 <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{% max_length Evento "observacao" %}">
               </div>
             </div>
+
             <div class="form-group row">
-              <label for="event-responsavel" class="col-sm-4 control-label">Responsável:</label>
+              <label for="event-responsavel" class="col-sm-4 control-label">Responsável</label>
               <div class="col-sm-8">
                 <select name="event-responsavel" id="event-responsavel" class="form-control" title="Selecione responsável">
                   <option value id="nenhum"> -------- </option>
@@ -72,6 +73,19 @@
                 </select>
               </div>
             </div>
+
+            <div class="form-group row">
+              <label for="event-material" class="col-sm-4 control-label">Material</label>
+              <div class="col-sm-8">
+                <select name="event-material" id="event-material" class="form-control" title="Selecione material anexo">
+                  <option value id="nenhum"> -------- </option>
+                  {% for documento in documentos %}
+                    <option value="{{documento.id}}">{{documento.anotacao}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+
             <div class="form-group row">
               <label for="min-date" class="col-sm-4 control-label">Datas</label>
               <div class="col-sm-8">
