--- a/documentos/templates/documentos/tabela_atas.html
+++ b/documentos/templates/documentos/tabela_atas.html
@@ -6,34 +6,23 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
   {% load arquivo_tipo %}
-
+  <link rel="stylesheet" href="{% static 'css/tab_simples.css' %}">
   <script src="{% static 'js/w3.js' %}"></script>
-
-  {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
-
-  <style>
-    td,th {
-      padding: 0px 6px 0px 6px;
-    }
-  </style>
-
 {% endblock %}
 
 {% block content %}
 
   <span class="titulo">Atas do Comitê do PFE</span>
 
-  {% if atas %}
   <div class="table-responsive">
-    <table id="AtasTable" class="table table-bordered table-sm" style="width: auto;">
+    <table id="AtasTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="w3.sortHTML('#AtasTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Data</th>
-          <th class="text-center">Documento</th>
+          <th onclick="w3.sortHTML('#AtasTable', '.item', 'td:nth-child(1)')">Data</th>
+          <th>Documento</th>
         </tr>
       </thead>
       <tbody>
@@ -41,30 +30,22 @@
         {% for group in grouped %}
           {% for obj in group.list %}
             <tr class="item">
-              {% ifchanged %}<td style="vertical-align:middle" rowspan="{{ group.list|length }}">{{ obj.data }}</td>{% endifchanged %}
-
+              {% ifchanged %}<td style="vertical-align:middle" rowspan="{{ group.list|length }}">{{obj.data|date:"DATE_FORMAT"}}</td>{% endifchanged %}
               <td style="text-align:center; padding: 2px; border-top-style: dotted;{% if not forloop.last %}border-bottom-style: dotted;{% endif %}">
-                <a class="btn btn-light btn-outline-info btn-sm" style="width: 6em; padding:0px 4px 0px 4px;"
-                   href="http://{{request.get_host}}{{MEDIA_URL}}{{obj.documento}}" 
-                  target="_blank" rel="noopener noreferrer"
-                  data-toggle="tooltip" data-html="true" animation="true" 
-                  {% if obj.anotacao %}
-                    title="anotação: {{obj.anotacao}}"
-                  {% endif %}
-                >
-                  {{obj.documento|get_tipo}}
-                </a>
+                <a class="btn btn-light btn-outline-info btn-sm tab_botao"
+                   href="http://{{request.get_host}}{{obj.get_url}}" 
+                   target="_blank" rel="noopener noreferrer"
+                   {% if obj.anotacao %}
+                    data-toggle="tooltip" data-html="true" animation="true" title="anotação: {{obj.anotacao}}"
+                   {% endif %}
+                >{{obj.documento|get_tipo}}</a>
               </td>
-              
             </tr>
           {% endfor %}
+        {% empty %}
+          <tr><td colspan="2">Não existem atas disponíveis.</td></tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-  {% else %}
-    <p>Não existem documentos disponíveis.</p>
-  {% endif %}
-  <br>
-
 {% endblock %}
