--- a/projetos/templates/projetos/filtra_projetos.html
+++ b/projetos/templates/projetos/filtra_projetos.html
@@ -17,30 +17,27 @@
   {% include "edicoes.html" %}
 
   {% comment %} Seletor para áreas de interesse {% endcomment %}
-  {% include "areas.html" with tudo_ligado=True titulo_areas=True not_outras=True %}
+  {% include "areas.html" with tudo_ligado=True titulo_areas=True not_outras=True com_borda=True %}
   
   <div class="atualizar">
-    {% if projetos %}
-    {{organizacao.proposta_set.count|stringformat:"03d"}}
-      <div class="table-responsive">
-        <table id="ProjetosTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
-          <thead class="table-info">
-            <tr>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Projeto</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Áreas</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Estudantes</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Período</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Organização</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Bancas</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Falconi</span></th>
-              <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Média</span></th>
-            </tr>
-          </thead>
-          {% for projeto in projetos %}
-          {% with estudantes=projeto.alocacao_set.all %}
-          {% with areas=projeto.proposta.areadeinteresse_set.all %}
+    <div class="table-responsive">
+      <table id="ProjetosTable" class="table table-bordered table-hover table-sm">
+        <thead class="table-info">
+          <tr>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Projeto</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Áreas</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Estudantes</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Período</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Organização</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Bancas</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Falconi</span></th>
+            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Média</span></th>
+          </tr>
+        </thead>
+        {% for projeto in projetos %}
+          {% with estudantes=projeto.alocacao_set.all areas=projeto.proposta.areadeinteresse_set.all %}
 
           <tr class="item {% for area in areas %}{{area.area.id}} {% endfor %}">
               <th scope="row" data-order="{{projeto.get_titulo}}"
@@ -100,83 +97,66 @@
               </td>
 
               {% with medias=projeto.medias %}
-              <td>
-                {{medias.0|floatformat:1|safe}}
-              </td>
-
-              <td>
-                {{medias.1|floatformat:1|safe}}
-              </td>
-
-              <td>
-                {{medias.2|floatformat:1|safe}}
-              </td>
-
-              <td>
-                {{medias.3|floatformat:1|safe}}
-              </td>
-
+                <td>{{medias.0|floatformat:1|safe}}</td>
+                <td>{{medias.1|floatformat:1|safe}}</td>
+                <td>{{medias.2|floatformat:1|safe}}</td>
+                <td>{{medias.3|floatformat:1|safe}}</td>
               {% endwith %}
 
             </tr>
 
           {% endwith %}
-          {% endwith %}
-          {% endfor %}
-          
-        </table>
-      </div>
-      {% comment %} <strong>Número Total de Projetos:</strong> {{ projetos.count }} {% endcomment %}
-    {% endif %}
-
-    <script>
-
-      var table = null;
-
-      function carrega_pagina() {
-
-        table = $('#ProjetosTable').DataTable();
-        
-        $.fn.dataTable.ext.search.push(
-          function(settings, data, dataIndex) {
-            
-            if(table) {
-
-              // Se o principal estiver selecionado, todos aparecem, mesmo sem nenhuma área marcada
-              if( $("#titulo_areas").is(':checked') ) {
-                return true;
-              }
-
-              filterList = $("input.filtra_area[type=checkbox]");
-              encontrou = false;      
-              filterList.each(function(i, el) {
-                  if($(el)[0].checked) {
-                    if($(table.row(dataIndex).node()).hasClass($(el)[0].id)) {
-                      encontrou = true;
-                    }
-                  }
-              });
-              return encontrou;
-            }
-            return true;
-          }
-        );
-
-        table.draw();
-
-      };
-      window.onload = carrega_pagina
-
-      $(".filtra_area").change(function(){
-        if(table) {
-          table.draw();
-        }
-      });
-      
-    </script>
-
+        {% endfor %}
+      </table>
+    </div>
   </div>
 
-  {% include "edicoes_ajax.html" with tabela='Projetos' %}
+  <script>
+
+    var table = null;
+
+    function carrega_pagina() {
+
+      table = $('#ProjetosTable').DataTable();
+      
+      $.fn.dataTable.ext.search.push(
+        function(settings, data, dataIndex) {
+          
+          if(table) {
+
+            // Se o principal estiver selecionado, todos aparecem, mesmo sem nenhuma área marcada
+            if( $("#titulo_areas").is(':checked') ) {
+              return true;
+            }
+
+            filterList = $("input.filtra_area[type=checkbox]");
+            encontrou = false;      
+            filterList.each(function(i, el) {
+                if($(el)[0].checked) {
+                  if($(table.row(dataIndex).node()).hasClass($(el)[0].id)) {
+                    encontrou = true;
+                  }
+                }
+            });
+            return encontrou;
+          }
+          return true;
+        }
+      );
+
+      table.draw();
+
+    };
+    window.onload = carrega_pagina
+
+    $(".filtra_area").change(function(){
+      if(table) {
+        table.draw();
+      }
+    });
+    
+  </script>
+
+  {% include "edicoes_ajax.html" with tabela="Projetos" %}
 
 {% endblock %}
