--- a/administracao/templates/administracao/conexoes_estabelecidas.html
+++ b/administracao/templates/administracao/conexoes_estabelecidas.html
@@ -6,29 +6,24 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
-
+  <link rel="stylesheet" href="{% static 'css/tab_simples.css' %}">
   <script src="{% static 'js/w3.js' %}"></script>
-
-  <style>
-    th, td {padding: 1px 6px 1px 6px;}
-  </style>
-
 {% endblock %}
 
 {% block content %}
 
   <span class="titulo">Conexões Abertas</span>
-    <div class="table-responsive">
-    <table id="UsuariosTable">
-      <thead>
+
+  <div class="table-responsive">
+    <table id="UsuariosTable" class="table-bordered table-sm">
+      <thead class="table-info">
         <tr>
-          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Usuário</th>
-          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Tipo</th>
-          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Autenticado</th>
-          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Conectado desde</th>
-          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Permissões</th>
+          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(1)')">Usuário</th>
+          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(2)')">Tipo</th>
+          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(3)')">Autenticado</th>
+          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(4)')">Conectado desde</th>
+          <th onclick="w3.sortHTML('#UsuariosTable', '.item', 'td:nth-child(5)')">Permissões</th>
         </tr>
       </thead>
       <tbody>
@@ -40,18 +35,20 @@
             <td>{{ usuario.desde }}</td>
             <td>{{ usuario.permissoes }}</td>
           </tr>
+        {% empty %}
+          <tr><td colspan="5">Nenhum usuário conectado</td></tr>
         {% endfor %}
       </tbody>
     </table>
-    </div>
-    <br>
+  </div>
+  <br>
 
-    <strong>Total de Conexões Válidas:</strong> {{ usuarios|length }}<br>
+  <strong>Total de Conexões Válidas:</strong> {{ usuarios|length }}<br>
 
-    <br><br>
-    {% if mensagem %}
-      <span class="red-bold">{{mensagem|linebreaks}}</span>
-    {% endif %}
-    <br>
+  <br><br>
+  {% if mensagem %}
+    <span class="red-bold">{{mensagem|linebreaks}}</span>
+  {% endif %}
+  <br>
 
 {% endblock %}
