--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -6,33 +6,20 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
-
+  <link rel="stylesheet" href="{% static 'css/tab_simples.css' %}">
   <script src="{% static 'js/w3.js' %}"></script>
-
-  {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
 
   <style>
     .cursor_pointer{
       cursor: pointer;
     }
-
-    td {
-      padding: 0px 4px 0px 4px;
-    }
-
-    th {
-      padding: 2px 4px 2px 4px;
-    }
-
     .tit_peq {
       display: block;
       font-weight: bold;
       line-height: 1.2 !important;
     }
-
   </style>
 
 {% endblock %}
@@ -41,7 +28,7 @@
 
   {% include "impressora.html" %}
 
-  <span class="titulo">Prospecção de Organizações para propostas a partir de {{ano}}.{{semestre}}
+  <span class="titulo">Prospecção de Organizações
     <a class="create-annotation"
        href="{% url 'anotacao' %}"
        data-url="{% url 'anotacao' %}">&#10133;</a>
@@ -79,42 +66,42 @@
 
   <br>
 
-  <div id="tabela">
+  <div id="atualizar">
 
     <script>
         var cursos_organizacoes = {};
     </script>
 
-    {% if organizacoes_list %}
-      <div class="table-responsive">
-      <table id="OrganizacoesTable" style="width:100%">
-        <thead>
+    
+    <div class="table-responsive">
+      <table id="OrganizacoesTable" class="table-bordered table-sm">
+        <thead class="table-info">
         <tr>
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')">
             Organização
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer;" width="48em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" width="48em">
             Área
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer;" width="85em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" width="85em">
             Interesse
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" width="97em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" width="97em">
             <small class="tit_peq">Último<br>Contato</small>
           </th>
           
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')">
             Anotação
           </th>
           
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" width="81em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" width="81em">
             <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Disponíveis</small>
           </th>
 
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" style="cursor:pointer" width="81em" class="text-center">
+          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" width="81em">
             <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Enviadas</small>
           </th>
         </tr>
@@ -249,9 +236,15 @@
 
             </tbody>
 
+        {% empty %}
+          <tr>
+            <td colspan="7" class="text-center">Nenhuma organização cadastrada.</td>
+          </tr>
         {% endfor %}
       </table>
       </div>
+
+      {% comment %} {% if organizacoes_list %}{% endcomment %}
 
       <b style="display: inline-block; margin-top: 16px;">Organizações contactadas recentemente ({{total_organizacoes}}):</b><br>
 
@@ -341,9 +334,7 @@
         </a><br>
 
       <br>
-    {% else %}
-      <p>Não existem organizações cadastradas.</p>
-    {% endif %}
+
 
   </div>
 
@@ -446,24 +437,18 @@
 
     }
 
-  </script>
-
-  <script type="text/javascript">
-
     function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
       var filterValue = $('.filter').val();
       var row = $('.item'); 
       row.hide();
 
       row.each(function(i, el) {
-        
         if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
             $(el).show();
         }
         else if( filterValue == "contactadas" && $(el).attr('data-type') > 0 ) {
             $(el).show();
         }
-
       });
     }
 
@@ -487,10 +472,10 @@
               url: "{% url 'organizacoes_prospect' %}",
               data: {
                   periodo: periodo,
-                  'csrfmiddlewaretoken': '{{ csrf_token }}',
+                  "csrfmiddlewaretoken": "{{ csrf_token }}",
               },
               success: function(response){
-                  $("#tabela").replaceWith($("#tabela",response));
+                  $("#atualizar").replaceWith($("#atualizar",response));
                   $(".tooltip-inner").remove();
                   $(".tooltip-arrow").remove();
                   filtra_data();
