--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -184,12 +184,13 @@
                 opção #{{prioridade}}
               {% endif %}">
                 {{aluno.user.get_full_name}}
-                <span class="curso">[{{ aluno.curso2 }}]</span>
+                <span class="opt_full curso">[{{ aluno.curso2 }}]</span>
+                <span class="opt_short curso">[{{ aluno.curso2.sigla_curta }}]</span>
               </a>
               {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span>{% endif %}
               <div class="prioridade" style="display: none;">{{prioridade}}</div> <!-- para mostrar no gráfico -->
-              <span class="emails"><a href="mailto:{{aluno.user.email}}">&lt;{{aluno.user.email}}&gt;</a></span>
-              <!-- &nbsp; { {{ aluno.alocacao_set.first.get_conceito_display }} } -->
+              <span class="opt_full emails"><a href="mailto:{{aluno.user.email}}">&lt;{{aluno.user.email}}&gt;</a></span>
+              <span class="opt_short emails"><a href="mailto:{{aluno.user.email}}">&#x2709;</a></span>
           </li>
         {% endfor %}
         </ol>
@@ -200,10 +201,10 @@
               {{ projeto.organizacao.nome }}
             </a>
             {% if projeto.organizacao.website %}
-              <span class="website">
-                (<a href="{{projeto.organizacao.website}}"
-                    >{{ projeto.organizacao.website }}</a>)
-              </span>
+            <span class="opt_full website">(<a href="{{projeto.organizacao.website}}"
+              >{{ projeto.organizacao.website }}</a>)</a></span>
+            <span class="opt_short website"><a href="{{projeto.organizacao.website}}"
+              >&#x1F517;</a></span>
             {% endif %}
             {% for cooperacao in cooperacoes %}
               {% if cooperacao.parceiro and cooperacao.parceiro.organizacao %}
@@ -211,9 +212,10 @@
                 <a href="{% url 'organizacao_completo' cooperacao.parceiro.organizacao.id %}">
                   {{ cooperacao.parceiro.organizacao.nome }}</a>
                   {% if cooperacao.parceiro.organizacao.website %}
-                    <span class="website">
-                    (<a href="{{cooperacao.parceiro.organizacao.website}}"
-                      >{{ cooperacao.parceiro.organizacao.website }}</a>)
+                  <span class="opt_full website">(<a href="{{cooperacao.parceiro.organizacao.website}}"
+                    >{{ cooperacao.parceiro.organizacao.website }}</a>)</a></span>
+                  <span class="opt_short website"><a href="{{cooperacao.parceiro.organizacao.website}}"
+                    >&#x1F517;</a></span>
                   {% endif %}
               {% endif %}
             {% endfor %}
@@ -246,7 +248,8 @@
               
               </span>
             </a>
-            <span class="emails"><a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a></span>
+            <span class="opt_full emails"><a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a></span>
+            <span class="opt_short emails"><a href="mailto:{{conexao.parceiro.user.email}}"> &#x2709;</a></span>
           {% else %}
             <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}" style="color: LightBlue;">
               {{ conexao.parceiro.user.get_full_name }}
@@ -260,7 +263,8 @@
               {% endif %}
               </span>
             </a>
-            <span class="emails"><a href="mailto:{{conexao.parceiro.user.email}}" style="color: LightBlue;"> &lt;{{conexao.parceiro.user.email}}&gt;</a></span>
+            <span class="opt_full emails"><a href="mailto:{{conexao.parceiro.user.email}}" style="color: LightBlue;"> &lt;{{conexao.parceiro.user.email}}&gt;</a></span>
+            <span class="opt_short emails"><a href="mailto:{{conexao.parceiro.user.email}}" style="color: LightBlue;"> &#x2709;</a></span>
             <br>
           {% endif %}
           </li>
