--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -75,19 +75,24 @@
             <br>
 
             <strong>Grupo:</strong>
-            <ul style="padding-left: 24px;">
-              {% for alocacao in projeto.alocacao_set.all %}
-                <li>
-                  <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
-                    {{alocacao.aluno.user.get_full_name}}
-                  </a>
-                  <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
-                  <span class="opt_short">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>                  
-                  <span class="opt_full emails"><a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a></span>
-                  <span class="opt_short emails"><a href="mailto:{{alocacao.aluno.user.email}}">&#x2709;</a></span>
-                </li>
-              {% endfor %}
-            </ul>
+            {% with alocacoes=projeto.alocacao_set.all %}
+              <a href="mailto:{% for alocacao in alocacoes %}{{alocacao.aluno.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caro{% if alocacoes|length > 1 %}s{% endif %}%20{% for alocacao in alocacoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{alocacao.aluno.user.get_full_name}}{% endfor %},%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">
+                <i class="fas fa-mail-bulk"></i>
+              </a>
+              <ul style="padding-left: 24px;">
+                {% for alocacao in alocacoes %}
+                  <li>
+                    <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                      {{alocacao.aluno.user.get_full_name}}
+                    </a>
+                    <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
+                    <span class="opt_short">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>                  
+                    <span class="opt_full emails"><a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a></span>
+                    <span class="opt_short emails"><a href="mailto:{{alocacao.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endwith %}
 
             <div style="margin:8px 0px 3px 0px; "><strong>Entregas:</strong></div>
             {% for item in entregas %}
