--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -11,6 +11,7 @@
   {% load dictionary %}
   {% load zip_data %}
   {% load l10n %}
+  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 
   <script src="{% static 'js/Chart.min.js' %}"></script>
 
@@ -26,12 +27,6 @@
         .tit_rel {
           font-size: 17px;
         }
-    }
-    .opt_short {display: none;}
-    .opt_full {display: inline;}
-    @media screen and (max-width: 800px) {
-      .opt_short {display: inline;}
-      .opt_full {display: none;}
     }
   </style>
 {% endblock %}
