--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -70,12 +70,12 @@
               </div>
             </div>
 
-            {% comment %} <div class="form-group row">
-              <label for="event-atividade" class="col-sm-4 control-label">Atividade</label>
+            <div class="form-group row">
+              <label for="event-descricao" class="col-sm-4 control-label">Descrição</label>
               <div class="col-sm-8">
-                <textarea class="form-control" id="event-atividade" name="event-atividade" rows="3"></textarea>
+                <textarea class="form-control" id="event-descricao" name="event-descricao" rows="3"></textarea>
               </div>
-            </div> {% endcomment %}
+            </div>
 
             <div class="form-group row">
               <label for="event-observation" class="col-sm-4 control-label">Observações</label>
