--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -106,7 +106,7 @@
       border-spacing: 0px;
       border: solid black 2px;
       border-radius: 8px;
-      padding: 4px 2px 4px 4px;
+      padding: 4px;
       margin-bottom: 18px;
     }
 
