--- a/templates/areas.html
+++ b/templates/areas.html
@@ -27,7 +27,7 @@
     </script>
 
     {% if com_borda %}
-        <div style="border-radius: 8px; border: 2px solid #737DF1; padding: 6px; width: fit-content; margin: 1em 0px 1em 0px;">
+        <div style="display: inline-block; border-radius: 8px; border: 2px solid #636DD1; padding: 6px; width: fit-content; margin: 0.1em 0px 0.5em 0px;">
     {% endif %}
 
     <table class="sem_b">
