--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -11,15 +11,12 @@
   {% include "tabelas_includes.html" %}
   <style>
     td {padding: 8px;}
-    
     .short-text { display: none; white-space: nowrap; }
     .full-text { display: inline-block; white-space: nowrap; }
-
     @media (max-width: 1400px) {
         .short-text { display: inline-block; }
         .full-text { display: none; }
     }
-    
     @media (max-width: 480px) {
       .short-text { font-size: x-small; }
     }
@@ -121,7 +118,7 @@
               {% endif %}
             </td>
 
-            <td>
+            <td style="text-align:center">
                 {% if relatorio.link%}
                   <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;" 
                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
@@ -131,13 +128,12 @@
                 {% endif %}
                 {% if relatorio.documento%}
                   <a class="btn btn-light btn-outline-info btn-sm"
-                     href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
+                     href="http://{{request.get_host}}{{relatorio.get_url}}" target="_blank" rel="noopener noreferrer">
                     <span class="short-text" style="width: 4em;">Serv. PFE</span>
                     <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Serv. PFE)</span>
                   </a>
                 {% endif %}
             </td>
-
 
             <td>
               {% if relatorio.link%}
@@ -146,8 +142,8 @@
                 </a><br>
               {% endif %}
               {% if relatorio.documento%}
-                <a href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
-                  <span>http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}</span>
+                <a href="http://{{request.get_host}}{{relatorio.get_url}}" target="_blank" rel="noopener noreferrer">
+                  <span>http://{{request.get_host}}{{relatorio.get_url}}</span>
                 </a>
               {% endif %}
           </td>
@@ -167,6 +163,7 @@
       if($('#RelatoriosTable th').length > 0) {   // Verifica se os THs foram registrados primeiro
         table = $('#RelatoriosTable').dataTable();
         if(table) {
+          table.fnSetColumnVis( 4, !($("#filterEdicao").val()!="todas" ));  // esconde Período
           table.fnSetColumnVis( 6, false );  // esconde longa URL
         }
       }
